# envlock

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs
src/core/: crypto.rs  mod.rs
src/utils/: git.rs  mod.rs  prompt.rs  tool.rs
