[package]
name = "envlock"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
argon2 = "0.5.3"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
rand = "0.9.2"
base64 = "0.22.1"
thiserror = "2.0.17"
rpassword = "7.4.0"
colored = "3.0.0"
